# kis-trading-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: start_public.sh  start_tunnel.sh  stop_server.sh  stop_tunnel.sh
src/trading_agent/: __init__.py  agent.py  auth.py  autopilot.py  config.py  indicators.py  kis_client.py  llm_agent.py  main.py  markets.py  names.py  portfolio.py  ratelimit.py  risk.py  schemas.py  storage.py
static/: app.js  styles.css
templates/: index.html
tests/: test_agent_mock.py  test_api.py  test_autotrade.py  test_config.py  test_conversations.py  test_execute.py  test_indicators.py  test_llm_agent.py  test_names.py  test_pagination.py  test_portfolio.py  test_risk.py  test_streaming.py  test_us_market.py
